<resources>
    <string name="app_name">Thermostat</string>
    <string name="bottom_nav_dashboard">Dashboard</string>
    <string name="bottom_nav_schedules">Schedules</string>
    <string name="bottom_nav_more">More</string>
    <string name="more_setup_thermostat_button_text">Setup Thermostat</string>
    <string name="setup_thermostat_text">Make sure you are connected to the Thermostat\'s Wifi Network and Mobile Data is turned off. The SSID and password are shown on the Thermostat\'s display. The Firebase credentials are sent automatically.</string>
    <string name="setup_thermostat_default_ip">192.168.1.1</string>
    <string name="setup_thermostat_ip_hint">IP Address</string>
    <string name="setup_thermostat_ssid_hint">Your SSID</string>
    <string name="setup_thermostat_password_hint">Your Password</string>
    <string name="setup_thermostat_timezone_hint">Timezone String</string>
    <string name="setup_thermostat_submit_button_text">Submit</string>
    <string name="setup_thermostat_ip_invalid_error">IP address is not valid</string>
    <string name="setup_thermostat_ssid_empty_error">SSID is empty</string>
    <string name="setup_thermostat_password_empty_error">Password is empty</string>
    <string name="setup_thermostat_firebase_not_init">Setup Firebase credentials first</string>
    <string name="setup_thermostat_timezone_empty_error">Timezone String is empty</string>
    <string name="setup_thermostat_success_toast">Success</string>
    <string name="setup_thermostat_bad_ip_toast">Bad IP</string>
    <string name="setup_thermostat_bad_server_response_toast">Unexpected Server Response</string>
    <string name="setup_thermostat_io_exception_toast">IO Exception</string>
    <string name="setup_thermostat_timed_out_toast">Timed out</string>
    <string name="more_setup_firebase_button_text">Setup Firebase</string>
    <string name="setup_firebase_text">Enter the name of your Firebase database and one secret key, which you can find by clicking the settings wheel next to Project Overview, then Service accounts and Database secrets</string>
    <string name="setup_firebase_url_hint">Firebase URL</string>
    <string name="setup_firebase_root_domain">.firebaseio.com</string>
    <string name="setup_firebase_secret_key_hint">Secret Key</string>
    <string name="setup_firebase_submit_button_text">Submit</string>
    <string name="setup_firebase_invalid_url">Invalid URL</string>
    <string name="setup_firebase_invalid_secret">Invalid Secret</string>
    <string name="firebase_success">Success</string>
    <string name="firebase_database_not_found">Database not found. Check your URL</string>
    <string name="firebase_unauthorized">Unauthorized to access database. Check your secret</string>
    <string name="firebase_io_exception">IO Exception</string>
    <string name="firebase_server_error">Server Error</string>
    <string name="firebase_not_initialized">Firebase connection not initialized. Run Setup Firebase</string>
    <string name="firebase_timeout">Timed out</string>
    <string name="schedules_menu_refresh">Refresh</string>
    <string name="schedules_repeat_daily">Daily</string>
    <string name="schedules_repeat_weekly">Weekly</string>
    <string name="schedules_repeat_once">Once</string>
    <string name="schedules_start">Start</string>
    <string name="schedules_end">End</string>
    <string name="schedules_weekdays_on">On</string>
    <string name="schedules_invalid_schedules_message_title">Invalid Schedules</string>
    <plurals name="schedules_invalid_schedules">
        <item quantity="one">There was %d invalid schedule in the database. It is not included in the list and will be overwritten if you submit any changes</item>
        <item quantity="other">There were %d invalid schedules in the database. They are not included in the list and will be overwritten if you submit any changes</item>
    </plurals>
    <string name="schedules_invalid_data_message_title">Invalid Data</string>
    <string name="schedules_invalid_data">The data found at the specified path is not in the right format and will be overwritten if you submit any changes</string>
    <string name="schedules_upload_fab_description">Upload</string>
    <string name="schedules_delete_fab_description">Delete</string>
    <string name="dialog_temperature_picker_title">Pick temperature</string>
    <string name="modify_schedule_modify_title">Modify schedule</string>
    <string name="modify_schedule_add_title">Add schedule</string>
    <string name="modify_schedule_save_action_title">SAVE</string>
    <string name="modify_schedule_start_not_before_end">Start time must be before end time</string>
    <string name="modify_schedule_select_at_least_one_weekday">You must select at least one weekday</string>
    <string name="modify_schedule_turned_into_daily">Schedule was turned into a daily one</string>
    <string name="add_schedule_button_text">Add Schedule</string>
    <string name="schedules_discard_changes_message_title">Discard changes</string>
    <string name="schedules_discard_changes_message">Refreshing the schedule list will override any uncommitted changes you\'ve made. Are you sure you want to continue?</string>
    <string name="schedules_menu_select_all">Select all</string>
    <string name="schedules_menu_deselect_all">Deselect all</string>
    <string name="dashboard_state_title">Thermostat State</string>
    <string name="dashboard_state_heater_on">Heater: on</string>
    <string name="dashboard_state_heater_off">Heater: off</string>
    <string name="dashboard_state_na">N/A</string>
    <string name="dashboard_temporary_title">Temporary Schedule</string>
    <string name="dashboard_temporary_not_active">Temporary Schedule is not active</string>
    <string name="dashboard_temporary_time_format">Expires %s</string>
</resources>
