<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupThermostatActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            style="@style/ToolbarStyle"
            android:id="@+id/setup_thermostat_toolbar" />

        <ProgressBar
            android:id="@+id/setup_thermostat_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-6dp"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:indeterminate="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp"
            android:background="@android:color/background_light">

            <TextView
                android:id="@+id/setup_thermostat_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textAppearance="@style/ThemeOverlay.MaterialComponents.Light"
                android:text="@string/setup_thermostat_text" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/setup_thermostat_ip_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/setup_thermostat_ip_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text="@string/setup_thermostat_default_ip"
                    android:lines="1"
                    android:maxLines="1"
                    android:hint="@string/setup_thermostat_ip_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/setup_thermostat_ssid_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/setup_thermostat_ssid_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:lines="1"
                        android:maxLines="1"
                        android:hint="@string/setup_thermostat_ssid_hint"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/setup_thermostat_password_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:errorEnabled="true"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/setup_thermostat_password_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLines="1"
                    android:hint="@string/setup_thermostat_password_hint"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/setup_thermostat_timezone_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/setup_thermostat_timezone_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLines="1"
                    android:hint="@string/setup_thermostat_timezone_hint"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/setup_thermostat_submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="16sp"
                style="@style/Widget.MaterialComponents.Button"
                android:text="@string/setup_thermostat_submit_button_text" />


        </LinearLayout>

    </LinearLayout>
</ScrollView>