<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetupFirebaseActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            style="@style/ToolbarStyle"
            android:id="@+id/setup_firebase_toolbar" />

        <ProgressBar
            android:id="@+id/setup_firebase_progress_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:indeterminate="true"
            android:layout_marginTop="-6dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textAppearance="@style/ThemeOverlay.MaterialComponents.Light"
                android:text="@string/setup_firebase_text" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/setup_firebase_url_text_input_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    app:errorEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/setup_firebase_url"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:importantForAutofill="no"
                        android:inputType="text"
                        android:text=""
                        android:lines="1"
                        android:maxLines="1"
                        android:minEms="8"
                        android:maxEms="13"
                        android:hint="@string/setup_firebase_url_hint" />

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/setup_firebase_root_domain"
                    android:layout_marginTop="32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_toEndOf="@+id/setup_firebase_url_text_input_layout"
                    android:textAppearance="@style/ThemeOverlay.MaterialComponents.Light"
                    android:layout_centerVertical="true"
                    android:textSize="16sp"/>

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/setup_firebase_secret_key_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/setup_firebase_secret_key"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text=""
                    android:lines="1"
                    android:maxLines="1"
                    android:hint="@string/setup_firebase_secret_key_hint" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/setup_firebase_schedules_path_text_input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/setup_firebase_schedules_path"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:text=""
                    android:lines="1"
                    android:maxLines="1"
                    android:hint="@string/setup_firebase_schedules_path" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/setup_firebase_submit_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.Button"
                android:textSize="16sp"
                android:text="@string/setup_firebase_submit_button_text"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>